Added photo of rice pudding

--- a/recipes/creamedrice.html
+++ b/recipes/creamedrice.html
@@ -10,9 +10,9 @@
 
     </head>
     <body>
-        <h1 Creamy Rice Pudding</h1>
+        <h1> Creamy Rice Pudding</h1>
 
-
+        <img src="./img/rice-pudding.jpg" alt="Rice pudding image"
 
 
     </body>
